2 canais de comunicacao